css/styles.css
/**********  Universal Style  ********/

* {
  box-sizing: border-box;
}

/**********  Base Layout Styles  ********/

a {
  text-decoration: none;
  text-transform: uppercase;
  color: #4D78AF;
}

body {
  font-family: 'Roboto Slab', serif;
  color: darkslategray;
  margin: auto;
  background: #ffdd9e;

}

h4,
h1 {
  font-family: 'Bree Serif', serif;
}

h3 {
  text-align: center;
}

h2 {
  text-align: center;
  text-transform: uppercase;
}

ul  {
  list-style-type: none;
  padding: 0;
}


hr {
  color: grey;
}

.container {
  background: white;
}

.portfolio-image {
  max-width: 100%;
}

.card {
  text-align: center;
  display: inline-block;
}

.contact-info {
  text-align: center;
}

#contact-header {
  text-transform: uppercase;
  font-size: 1rem;
}

#portfolio-heading {
  text-transform: uppercase;
}

/**********  Link Styles  ********/

a:hover {
  color: lightcoral;
}

a:visited {
  color: #509EC9;
}

.main-nav a:hover {
  color: lightcoral;
}

.footer-nav a:hover {
  color: lightcoral;
}


/**********  Float Clearfix  ********/

.clearfix:after {
  content: "";
  display: table;
  clear: both;
}

/**********  Media Queries  ********/

@media (min-width: 320px) and (max-width: 767px) {

  h1 {
    text-align: center;
  }

  hr {
    margin: 0 3% 0 3%;
  }

  #profile-img {
    width: 60%;
    margin-left: 20%;
    margin-right: 20%;
   }

   #portfolio-heading {
     padding: 35px 0;
     margin: 0 2.5% 0;
     background: white;
   }

  .main-header {
    text-align: center;
  }

  .intro {
    text-align: center;
    margin-left: 2.5%;
    margin-right: 2.5%;
    padding-bottom: 25px;
    font-size: 1.13rem;
  }

  .main-nav a {
    display: block;
  }

  .main-nav li {
    margin-top: 5px;
    background: white;
    padding: 8px;
  }

  .main-nav,
  .container2,
  .container {
    margin-left: 2.5%;
    margin-right: 2.5%;
  }

  .card {
    padding-bottom: 35px;
  }

  .card p {
    padding: 3% 5%;
    font-size: 1.06rem;
  }

  #contact-header {
    padding: 15px 0;
  }

  .contact-info {
    padding: 20px 2.5% 50px;
  }

 .footer-nav {
   display: none;
 }

 .footer-name {
   float: left;
   padding-bottom: 6px;
   margin: 0 0 5% 2.5%;
 }

 #to-top {
   float: right;
   margin: 0 2.5% 5% 0;
   padding-bottom: 26px;
 }

}

@media (min-width: 768px) and (max-width: 1023px) {

  h1 {
    text-align: center;
    padding: 10px 0;
    margin-bottom: 0;
  }

  hr {
    margin: 0;
  }

  .main-nav {
    text-align: center;
    margin: 0 auto;

  }

  .main-nav li {
    display: inline;
    padding: 0 2%;
  }

  .main-nav {
    padding: 2.8% 0;
  }

  .main-header {
    padding-bottom: 5px;
  }

  .main-intro {
    padding-bottom: 35px;
    margin: 0 3%;
  }

  .intro {
    text-align: left;
    font-size: 1.4rem;
  }

  #profile-img {
    width: 45%;
    float: right;
    margin: 0 auto;
   }

  .main-header,
  .container2  {
     margin-left: 3%;
     margin-right: 3%;
  }

  .container {
    margin: 0;
    padding: 0 3%;
  }

  #portfolio-heading {
    margin: 0;
    padding: 3% 0;
    background: white;
  }

  .card {
    float: left;
    width: 50%;
    height: 410px;
    overflow: hidden;
    word-wrap: break-word;
    padding: 0 1% 3%;
  }


  .contact-info {
    padding: 3% 0;
  }

  .outro {
    margin: 0 25% 0 25%;
  }

  .footer-info {
    position: relative;
  }

  .footer-nav {
    padding-bottom: 30px;
  }

  .footer-nav ul {
    margin: 8px 3% 20px;
    position: absolute;
    right: -24px;
  }

  .footer-nav li {
    padding: 0 0 0 20px;
    display: inline-block;
    font-weight: bold;
  }

  .footer-name {
    float: left;
    margin-top: 8px;
    padding-bottom: 17px;
  }

  #to-top {
    display: none;
  }

}

@media (min-width: 1024px)  {

  h1 {
    float: left;
    font-size: 2.2rem;
    padding: 10px 0;
    margin-bottom: 1.2rem;
    position: relative;
  }

  .main-header nav ul {
    position: absolute;
    right: -20px;
  }


  .main-nav li {
    display: inline;
    padding: 0 4%;
    font-size: 1.2rem;
  }

  .main-nav {
    padding: 2.8% 0;
  }

  #profile-img {
    width: 45%;
    float: right;
    margin: auto;
    padding: 0 0 4% 17px;
   }

   .intro {
     font-size: 1.6rem;
   }

   .main-intro {
     padding-bottom: 40px;
   }

   #portfolio-heading {
     margin: 0 4%;
     padding: 4% 0 4% 10px;
     background: white;
   }

   .main-header,
   .main-intro,
   .container2  {
      margin-left: 6%;
      margin-right: 6%;
   }

   .container {
     margin: 0 4%;
     padding: 0 3%;
   }

   .card {
     float: left;
     width: 33.33%;
     height: 410px;
     overflow: hidden;
     word-wrap: break-word;
     padding: 0 1% 3%;
   }

   .contact-info {
     padding: 3% 0;
   }

   #contact-header {
     padding: 15px 0;
     font-size: 1.5rem;
   }

   .contact-info p {
     margin: 0 25% 0 25%;
     font-size: 1.3rem;
     padding: 0.7% 0;
   }

   .footer-info {
     position: relative;
   }

   .footer-nav {
     padding-top: 8px;
   }

   .footer-nav ul {
     margin: 8px 3% 20px;
     position: absolute;
     right: -24px;
   }

   .footer-nav li {
     padding: 0 0 0 50px;
     display: inline-block;
     font-size: 1.2rem;
     font-weight: 900;
   }

   .footer-name {
     font-size: 1.5rem;
     float: left;
     padding-top: 10px;
     margin: 0 auto;

   }

   #to-top {
     display: none;
   }










}

